[gd_scene format=3 uid="uid://bxqv1p486yic8"]

[ext_resource type="Script" uid="uid://dbgo3k8nroqur" path="res://Scripts/base_projectile.gd" id="1_4ldv7"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yhkk7"]
radius = 5.0990195

[node name="BaseProjectile" type="Area2D" unique_id=1149445516]
collision_layer = 0
collision_mask = 5
script = ExtResource("1_4ldv7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1016772087]
shape = SubResource("CircleShape2D_yhkk7")

[node name="LifeTimer" type="Timer" parent="." unique_id=877350481]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
